--- a/GraphLibrary/GraphLibrary.vbproj
+++ b/GraphLibrary/GraphLibrary.vbproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{00000000-0000-0000-0000-000000000000}</ProjectGuid>
+    <ProjectGuid>{D7AC361A-8188-4CEB-9DFE-8F0F63F9DBE1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>GraphLibrary</RootNamespace>
     <AssemblyName>GraphLibrary</AssemblyName>
@@ -60,7 +60,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.vb" />
+    <Compile Include="clsDirectedGraph.vb" />
+    <Compile Include="clsGraph.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
